# Line_BastaDector

./: .gitignore  CMakeLists.txt  README.md  showresul.ipynb
src/: chebydis.txt  dz0.csv  dz1_0.csv  dz1_1.csv  dz1_2.csv  dz1_3.csv  dz2_0.csv  dz2_2.csv  dz2_3.csv  dzte_1.csv  dztz_0.csv  dztz_1.csv  dztz_11.csv  dztz_12.csv  dztz_13.csv  dztz_2.csv  dztz_4.csv  dztz_5.csv  dztz_8.csv  goal.cpp  linextra.cpp  method.cpp  pcltest.cpp  rabbit.cpp  writefile.cpp
src/csv_data/: dztz_0.csv  dztz_1.csv  dztz_10.csv  dztz_11.csv  dztz_12.csv  dztz_13.csv  dztz_14.csv  dztz_2.csv  dztz_3.csv  dztz_4.csv  dztz_5.csv  dztz_6.csv  dztz_7.csv  dztz_8.csv  dztz_9.csv
src/include/: attribute.h  circlefit.h  dataread.h  licifit.h  release.h  resbyfit.h  resbyvec.h  vectencap.h
